--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('/img/goldglitterbg.jpg');
+    background-image: url('../img/goldglitterbg.jpg');
     min-height: 100%;
 }
 
