--- a/style.css
+++ b/style.css
@@ -16,13 +16,13 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('../img/goldglitterbg.jpg');
+    background-image: url('img/goldglitterbg.jpg');
     min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-    background-image: url("/img/blackchairs.jpg");
+    background-image: url("img/blackchairs.jpg");
     min-height: 400px;
 }
 
