--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('img/goldglitterbg.jpg');
+    background-image: url('img/greenhousegirl.jpg');
     min-height: 100%;
 }
 
@@ -28,7 +28,7 @@ body, html {
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url("/w3images/parallax3.jpg");
+    background-image: url("img/goldglitterbg.jpg");
     min-height: 400px;
 }
 
