--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+body,h1,h2,h3,h4,h5,h6 {font-family: 'PT Sans', sans-serif;}
 body, html {
     height: 100%;
     color: #777;
